fix: try to fix no tickets dialog on iOS

--- a/src/components/ReceiveTickets/ReceiveTickets.styl
+++ b/src/components/ReceiveTickets/ReceiveTickets.styl
@@ -36,7 +36,7 @@
   position: fixed
 
   opacity: 1
-  z-index: 999 
+  z-index: 99999
 
   transition: opacity 0.2s 0s
 
